Sdded fields and fixed buttons

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -25,12 +25,12 @@
     <div class="col-md-6">
         <h3>Latest News</h3>
         <hr style="border:none;background-color:#cccccc;color:#cccccc;height:1px;">
-        <h4>03/15/11</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#/home">&nbsp;More...</a></p>
-        <h4>02/21/11</h4>
-        <p>Etiam pharetra, tellus sit amet congue vulputate, nisi erat iaculis. <a href="#/home">More...</a></p>
-        <h4>01/15/11</h4>
-        <p>Etiam pharetra, tellus sit amet congue vulputate, nisi erat iaculis. <a href="#/home">More...</a></p>
+        <h4>01/15/16</h4>
+        <p>Workshop on how to buy a car. <a href="#/home">&nbsp;More...</a></p>
+        <h4>02/21/16</h4>
+        <p>15% off all hondas! <a href="#/home">More...</a></p>
+        <h4>03/17/16</h4>
+        <p>Antique car show and auction! <a href="#/home">More...</a></p>
     </div>
 </div>
 
@@ -39,28 +39,30 @@
         <h3>Featured</h3>
         <hr style="border:none;background-color:#cccccc;color:#cccccc;height:1px;">
         <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top3.png" class=""></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, tellus sit amet congue.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
+        <p>Click here to see our featured vehicles.</p>
+        <br>
+        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('/featured')">Read more</button></p>
     </div>
     <div class="col-md-3">
-        <h3>Parts & Serviceg</h3>
+        <h3>Parts & Services</h3>
         <hr style="border:none;background-color:#cccccc;color:#cccccc;height:1px;">
         <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top1.png" class=""></p>
-        <p>Cras elit nisl, rhoncus nec iaculis ultricies. Etiam pharetra, tellus sit amet congue vulputate.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
+        <p>Click here if you have car problems.</p>
+        <br>
+        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('/partsandservice')">Read more</button></p>
     </div>
     <div class="col-md-3">
         <h3>Offers</h3>
         <hr style="border:none;background-color:#C4D8E9;color:#C4D8E9;height:1px;">
-        <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top2.png" class=""></p>
-        <p>Tellus sit amet congue vulputate, nisi erat iaculis nibh, vitae feugiat sapien ante eget mauris.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
+        <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top4.png" class=""></p>
+        <p>Click here to check out our exclusive new offers.</p>
+        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('/offers')">Read more</button></p>
     </div>
     <div class="col-md-3">
         <h3>Accessories</h3>
         <hr style="border:none;background-color:#C4D8E9;color:#C4D8E9;height:1px;">
         <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top2.png" class=""></p>
-        <p>Tellus sit amet congue vulputate, nisi erat iaculis nibh, vitae feugiat sapien ante eget mauris.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
+        <p>Click here to check out new and modern accessories for your vehicle.</p>
+        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('/accessories')">Read more</button></p>
     </div>
 </div>
