--- a/app/partials/parts-service.html
+++ b/app/partials/parts-service.html
@@ -4,13 +4,31 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-6">
-        <h4>Enter Date of Service (mm/dd/yyyy)</h4>
-        <div class="input-group col-lg-12">
-            <input type="text" class="form-control search-bar" placeholder="Date" aria-describedby="service-date">
-        </div>
+    <h4>Enter Date of Service (mm/dd/yyyy)</h4>
+    <div class="input-group col-lg-12">
+        <input type="text" class="form-control search-bar" placeholder="Date" aria-describedby="service-date">
     </div>
+</div>
+<div class="row">
+
+
+    <h4>Enter model</h4>
+    <div class="input-group col-lg-12">
+        <input type="text" class="form-control search-bar" placeholder="Model" aria-describedby="service-date">
+    </div>
+    </div>
+    <div class="row">
+        <h4>Enter year</h4>
+    <div class="input-group col-lg-12">
+        <input type="text" class="form-control search-bar" placeholder="Year" aria-describedby="service-date">
+        </div>
+        <div class="row">
     <div class="col-lg-6">
+        <h4>Enter VIN</h4>
+        <div class="input-group col-lg-12">
+            <input type="text" class="form-control search-bar" placeholder="VIN" aria-describedby="service-date">
+            <div class="row"
+        </div><div class="col-lg-6">
         <h4>Enter Service Reason</h4>
         <div class="input-group col-lg-12">
             <input type="text" class="form-control search-bar" placeholder="What seems to be the problem?" aria-describedby="service-reason">
