--- a/app/partials/featured.html
+++ b/app/partials/featured.html
@@ -1,19 +1,21 @@
+<div style="border-style:solid;   padding-top: 50px; padding-right: 100px; padding-left: 100px; padding-bottom: 80px">
 <h1>Featured</h1>
-<div class="row">
-    <div class="col-md-6">
+<div class="row" style="border-style:solid; border-width: thin;"  >
+    <div class="col-md-6" >
 
-        <h3>2016 Toyota Corolla</h3>
-        <div class="row">
+        <h3 style="text-align: center">2016 Toyota Corolla</h3>
+        <div class="row" style="position:absolute; left:25%;">
             <img src="app/img/16corolla2.png" width="245" height="212">
 
         </div>
 
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6" style="border-left: solid; border-width: thin;">
 
-        <h3>2016 Toyota Camry</h3>
+        <h3 style="text-align: center">2016 Toyota Camry</h3>
         <div class="row">
-            <img src="app/img/16camry.png" width="245" height="212">
+            <img src="app/img/16camry.png" width="245" height="212" style="float: left; margin-left: 120px">
+
 
         </div>
 
@@ -21,21 +23,21 @@
     </div>
 
 </div>
-<div class="row">
+<div class="row" style="border-style:solid; border-width: thin;">
     <div class="col-md-6">
 
-        <h3>2016 Toyota RAV-4</h3>
-        <div class="row">
+        <h3 style="text-align: center">2016 Toyota RAV-4</h3>
+        <div class="row" style="position:absolute; left:25%;">
             <img src="app/img/16rav4.png" width="245" height="212">
 
         </div>
 
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6" style="border-left: solid; border-width: thin; ">
 
-        <h3>2016 Toyota Prius</h3>
-        <div class="row">
-            <img src="app/img/16prius.png" width="245" height="212">
+        <h3 style="text-align: center">2016 Toyota Prius</h3>
+        <div class="row" >
+            <img src="app/img/16prius.png" width="245" height="212" style="float: left; margin-left: 120px">
 
         </div>
 
@@ -43,4 +45,4 @@
     </div>
 
 </div>
-
+</div>
