--- a/app/partials/accessories.html
+++ b/app/partials/accessories.html
@@ -1,19 +1,33 @@
+<div style="border-style:solid;border-width:thin;padding: 50px 100px 80px 100px">
 <div class="row">
     <div class="col-lg-4">
         <h2>Accessories</h2>
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-4" style="border-style:solid;border-width:thin;">
         <h4>Speakers</h4>
         <img src="app/img/speakers.jpg" height="150" width="150"/>
     </div>
-    <div class="col-lg-12">
+    <div class="col-lg-4" style="border-style:solid;border-width:thin;">
         <h4>Seats</h4>
         <img src="app/img/seats.jpeg" height="150" width="150"/>
     </div>
-    <div class="col-lg-12">
+    <div class="col-lg-4" style="border-style:solid;border-width:thin;">
         <h4>Power Extension</h4>
         <img src="app/img/power-extension.jpeg" height="150" width="150"/>
     </div>
+    <div class="col-lg-4" style="border-style:solid;border-width:thin;">
+        <h4>Fuzzy Dice</h4>
+        <img src="app/img/dice.jpg" height="150" width="150"/>
+    </div>
+    <div class="col-lg-4" style="border-style:solid;border-width:thin;">
+        <h4>Hydraulics</h4>
+        <img src="app/img/hydraulics.jfif" height="150" width="150"/>
+    </div>
+    <div class="col-lg-4" style="border-style:solid;border-width:thin;">
+        <h4>Flames Decal</h4>
+        <img src="app/img/flamesdecal.jfif" height="150" width="150"/>
+    </div>
 </div>
+    </div>
