--- a/app/partials/contactme.html
+++ b/app/partials/contactme.html
@@ -13,6 +13,23 @@
 
                     </div>
                 </div>
+                <div class="row">
+                    <div class="form-group">
+                        <label>Last Name *</label><input name="total" ng-model="contactinfo.LastName" class="form-control" ng-required>
+
+                    </div>
+                </div>
+                 <div class="row">
+                    <div class="form-group">
+                        <label>Email *</label><input name="total" ng-model="contactinfo.email" class="form-control" ng-required>
+
+                     </div>
+                </div>
+                <div class="row">
+                    <div class="form-group">
+                        <label>Phone Number *</label><input name="total" ng-model="contactinfo.phoneNumber" class="form-control" ng-required>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
